--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,11 @@
 <resources>
     <string name="app_name">FakeStoreApp</string>
+    <string name="no_internet_connection">No Internet Connection !!</string>
+    <string name="try_again">Try again</string>
+    <string name="price">Price:</string>
+    <string name="home">Home</string>
+    <string name="description">description:</string>
+    <string name="rating">rating:</string>
+    <string name="price_title">price:</string>
+    <string name="details">Details</string>
 </resources>
